# prrt-eval-artifacts

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md
inc_search_eval/: Cargo.toml  README.md
inc_search_eval/src/: incremental_search.rs  incremental_search_full.rs  main.rs
python/: eval_convergence.ipynb  eval_missmatch.ipynb  eval_util_and_plots.py  execution_time_CDF.ipynb  incremental_search_eval.ipynb  requirements.txt
python/inc_search_eval/: README.md
python/inc_search_eval/paper_data/: results_execution_time_NCL0_maxkp2048.csv.br  results_execution_time_NCL5_maxkp2048.csv.br  results_execution_time_NCL5_maxkp256.csv.br  results_execution_time_NCL5_maxkp65535.csv.br  results_execution_time_NCL9_maxkp2048.csv.br  results_nc_limits.csv.br
python/traces/convergence/: phase_switches.csv
python/traces/convergence/controller/: controller_corrected_erasure_rate.csv.br  controller_e2e_erasure_rate.csv.br  controller_integral_error.csv.br  controller_local_erasure_rate.csv.br  controller_schedule_update_packet_debt.csv.br  controller_schedule_update_ri.csv.br
python/traces/convergence/sender/: parity_packet_send.csv.br
python/traces/mismatch/: phase_switches.csv
python/traces/mismatch/controller/: controller_corrected_erasure_rate.csv.br  controller_e2e_erasure_rate.csv.br  controller_integral_error.csv.br  controller_local_erasure_rate.csv.br  controller_schedule_update_packet_debt.csv.br  controller_schedule_update_ri.csv.br
python/traces/mismatch/sender/: parity_packet_send.csv.br
src/: main.rs
