[package]
name = "prrt_eval"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
prrt = { path = "prrt/prrt", features = ["tracing"] }
lltc = { path = "prrt/lltc" }
clap = { version = "4.0", features = ["derive"] }
caps = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
